# phaseprogramming-pub

./: .gitignore  Makefile  README  fh_solve_convex.py  pyproject.toml  setup.py
examples/: example-targets-N1.txt  example-targets-N2.txt  example-targets-N3.txt  example-targets-N4.txt  example-targets-N5.txt  example-targets-N6.txt
src/: cfh.pyx  epsilon_matrix.py  fh.py  fh_coexistence.py  fh_program.py  fh_solve_coex.py  fh_test.py
